Refactor workforce to OpenClaw intent planning flow